src/test/resources/repos/invalid-binary-desc-subjects/a6f/e58/a7f/a6fe58a7f87784a02c1d2e3623a7dc7c52fdd54932dd9457ea8ed060c5fc73a3/v2/content/binary-invalid~fcr-desc.nt
<info:fedora/binary-invalid/fcr:metadata> <http://purl.org/dc/elements/1.1/title> "Binary invalid" .
